# sWeden_Amyg

./: .gitignore  Amygdala_keysight_controll.py  RAMP UP.py  README.md  Rampa.py  STIM.py  beta_interface.py  import pyvisa as visa.py  light_version_working.py  participant_conditions.xlsx  pyproject.toml  requirements.txt  requirements_poc.txt  software_architecture.md  tester.py
cfg/: keysight_config.json  participant_conditions_path.txt.template  participant_config.txt  ti_config.json.poc
config/: keysight_config.json  participant_config.txt  ti_config.json
scripts/: 01_00_TILA_TI-controller-GUI.py  load_ti_config.py
scripts/examples/: test_gui.py  test_participant_process.py  ti_cli.py
src/: 00_00_TILA_TI-controller-GUI.py  00_00_TILA_TI-controller.py  01_00_TILA_TI-controller-GUI.py  02_00_TILA_TI-controller-GUI.py  simplest_comm.py
src/_deprecated/: STIM.py
src/core/: experiment_manager.py
src/lib/: configurable_csv_logger.py  keysight_edu.py  keysight_edu_mockup.py  participant_assigner.py  stim_controller.py  stim_controller_with_gui.py
src/participant/: __init__.py  assignment_service.py  condition_repository.py  config_loader.py  participant.py  participant_assigner_api.py  participant_data_logger.py  participant_list.py  participant_manager.py  participant_repository.py
src/sWeden_Amyg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/temporal_interference/: api.py  config.py  electrode.py  temporal_interference.rar  ti_api.py  ti_channel.py  (+4 more)
tests/: test_electrodes.py  test_keysight_edu33212A.py  test_ti_manager.py
(+41 files in other folders)
